--- a/frontend/src/shared/components/MainNavigation/MainNavigation.css
+++ b/frontend/src/shared/components/MainNavigation/MainNavigation.css
@@ -11,35 +11,47 @@
     cursor: pointer;
   }
 
-  .main-navigation__menu-btn span {
-    display: block;
-    width: 3rem;
-    height: 2.5px;
-    background: white;
-  }
+.main-navigation__menu-btn span {
+  display: block;
+  width: 3rem;
+  height: 2.5px;
+  background: white;
+}
 
-  .main-navigation__title {
-    color: white;
-  }
+.main-navigation__title {
+  color: white;
+}
 
-  .main-navigation__title a {
-    text-decoration: none;
-    color: white;
-  }
+.main-navigation__title a {
+  text-decoration: none;
+  color: white;
+}
 
-  .main-navigation__header-nav {
+.main-navigation__header-nav {
+  display: none;
+}
+
+.main-navigation__drawer-nav {
+  height: 100%;
+}
+
+@media (min-width: 768px) {
+  .main-navigation__menu-btn {
     display: none;
   }
-
-  .main-navigation__drawer-nav {
-    height: 100%;
+  .main-navigation__header-nav {
+    display: block;
   }
+}
 
-  @media (min-width: 768px) {
-    .main-navigation__menu-btn {
-      display: none;
-    }
-    .main-navigation__header-nav {
-      display: block;
-    }
+@media (max-width: 398px) {
+  .main-navigation__title {
+    font-size: 2.5rem;
   }
+}
+
+@media (max-width: 340px) {
+  .main-navigation__title {
+    font-size: 2rem;
+  }
+}
